--- a/src/Maze.css
+++ b/src/Maze.css
@@ -13,8 +13,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 35px;
-  height: 35px;
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
 }
 
@@ -32,4 +32,24 @@
 
 .maze-cell.wall-left {
   border-left: 1px solid white;
+}
+
+.maze-cell.has-food {
+  background-size: cover;
+}
+
+.maze-cell .hero {
+  width: 100%;
+}
+
+.maze-cell .hero.direction-left {
+  transform: rotate(90deg);
+}
+
+.maze-cell .hero.direction-top {
+  transform: rotate(180deg);
+}
+
+.maze-cell .hero.direction-right {
+  transform: rotate(-90deg);
 }
